Updates from ShareLaTeX

--- a/01innledning.tex
+++ b/01innledning.tex
@@ -29,3 +29,8 @@ Et problem med et bestemt input.
 \subsubsection{Iterasjon}
 En gjennomkjøring av en gjentatt handling.
 
+\subsubsection{Problemstørrelse}
+
+\subsubsection{Inkrementell design}
+
+
