--- a/02datastrukturer.tex
+++ b/02datastrukturer.tex
@@ -114,5 +114,10 @@ For hver node $i$, bortsett fra rot-noden, må verdien til barnenodene være min
 \subsubsection{Min-heap}
 For hver node $i$, bortsett fra rot-noden, må verdien til barnenodene være større eller lik foreldrenoden. $A[PARENT(i)]\leq A[i]$
 
+\subsection{Chaining}
 
+\subsection{Statiske datasett}
+Kan ha worst-case $O(1)$ for søk.
+
+\subsection{Amortisert analyse}
 
