--- a/08gradigealgoritmer.tex
+++ b/08gradigealgoritmer.tex
@@ -48,3 +48,6 @@ Legg merke til at dette er en prefikskode. Ordet ''se'' blir 1110, ordet ''erter
 \label{fig:huffman}
 \end{figure}
 \end{boxed}
+
+\subsection{Bevis ved fortrinn}
+\subsection{Bevis ved forsprang}
