--- a/10problemkompleksitet.tex
+++ b/10problemkompleksitet.tex
@@ -46,3 +46,6 @@ Nå kan vi vise at TSP er med i NCP. Vi tar utgangspunkt i Hamiltonsykelprobleme
 \newline
 Av sammenligningen skjønner vi at dersom vi finner en algoritme for å løse vårt problem (TSP), vil denne også kunne løse Hamiltonsykel-problemet. Altså kan vi konkludere med at TSP er NPC.
 \end{boxed}
+
+\subsection{Optimering- og beslutningsproblemer}
+\subsection{Koding av en instans}
