--- a/09minimalespenntraer.tex
+++ b/09minimalespenntraer.tex
@@ -69,7 +69,7 @@ Et binært søketre er bygget som et binært tre, men det er i tillegg organiser
 \label{fig:binaeresoeketraer}
 \end{figure}
 
-\noindent Poenget er at med denne organiseringen er det vanligvis ganske kjapt å finne fram til ønsket node. Hvor lang tid det tar avhenger imidlertid av hvor heldig vi er med rekkefølgen nodene settes inn i. Hvor lang tid det tar å finne et element i verste tilfelle avhenger direkte av høyden til treet.
+\noindent Poenget er at med denne organiseringen er det vanligvis ganske kjapt å finne fram til ønsket node. Hvor lang tid det tar avhenger imidlertid av hvor heldig vi er med rekkefølgen nodene settes inn i. Hvor lang tid det tar å finne et element i verste tilfelle avhenger direkte av høyden til treet.  Forventet høyde for et tilfeldig binært søketre er $\theta(lg n)$. Det finnes søketrær med garantert høyde på $/theta(lg n)$.
 \\\\
 \textbf{Innsetting av node}\\
 Innsetting av noder i et binært tre er enkelt. Det er bare å passe på å overholde kriteriene for et binærtre. Vi starter alltid ved roten. Dersom treet ikke har noen rot, dvs. treet ikke er påbegynt, settes vår node til å være rotnoden. Ellers sjekker vi for hver nye node vi kommer til om verdien til noden vi skal sette inn er større eller mindre enn verdien til denne noden. Dersom den er mindre, går vi til venstre, ellers går vi til høyre. Vår node kan settes inn på første tomme plass vi kommer til.
@@ -168,3 +168,8 @@ Altså den mengden med kanter som minimerer summen av vekter samtidig som grafen
 
 \subsubsection{Kruskal}
 Prinsippet med Kruskals algorimte er å sortere alle kantene etter kostnad, og se på kantene i stigende rekkefølge. Ta en kant (og nodene den går mellom) i spenntreet med mindre kanten ville ha laget en sykel. Fortsett til det ikke er flere kanter som kan legges til. Ideen er enkel, men for at algoritmen skal bli effektiv trenger man en avansert datastruktur som kalles \textit{disjoint set} for raskt å kunne finne ut om en kant vil danne en sykel eller ikke. Derfor anbefales Prim når man skal implementere en MST-algoritme selv.
+
+\subsection{Spenntrær}
+\subsection{GENERIC-MST}
+\subsection{MST-KRUSKAL}
+\subsection{MST-PRIM}
