--- a/09minimalespenntraer.tex
+++ b/09minimalespenntraer.tex
@@ -169,7 +169,8 @@ Altså den mengden med kanter som minimerer summen av vekter samtidig som grafen
 \subsubsection{Kruskal}
 Prinsippet med Kruskals algorimte er å sortere alle kantene etter kostnad, og se på kantene i stigende rekkefølge. Ta en kant (og nodene den går mellom) i spenntreet med mindre kanten ville ha laget en sykel. Fortsett til det ikke er flere kanter som kan legges til. Ideen er enkel, men for at algoritmen skal bli effektiv trenger man en avansert datastruktur som kalles \textit{disjoint set} for raskt å kunne finne ut om en kant vil danne en sykel eller ikke. Derfor anbefales Prim når man skal implementere en MST-algoritme selv.
 
+\subsubsection{GENERIC-MST}
+\subsubsection{MST-KRUSKAL}
+\subsubsection{MST-PRIM}
+
 \subsection{Spenntrær}
-\subsection{GENERIC-MST}
-\subsection{MST-KRUSKAL}
-\subsection{MST-PRIM}
