Updates from ShareLaTeX

--- a/02datastrukturer.tex
+++ b/02datastrukturer.tex
@@ -1,4 +1,5 @@
 \section{Datastrukturer}
+En datastruktur er en måte å lagre og organisere data slik at man kan fasilitere og moderere de.
 
 \subsection{Lenkede lister}
 En lenket liste er en enkel datastruktur hvor objektene er ordnet lineært. Hvert objekt har helst to peker-variabler; \textit{next} og \textit{prev}. Har den begge disse peker-variablene er det en dobbelt lenket liste. Ved kun en peker (\textit{next}) er det en enkelt-lenket liste. Hvert element peker til det neste i rekkefølgen. Man kan også ha dobbeltlenkede lister, der hver node inneholder en verdi og peker til både forrige og neste node.
