--- a/05sorteringogsoking.tex
+++ b/05sorteringogsoking.tex
@@ -37,6 +37,8 @@ At en sorteringalgoritme er stabil vil si at den ikke bytter om på like element
 \subsubsection{Splitt og hersk/Divide and conquer}
 %strukturell induksjon
 
+Problemene deles opp i flere delproblemer som ligner på hovedproblemet men i mindre størrelse, og løser problemene rekursivt. Deretter kombineres løsningene for å få en løsning på det originale problemet.
+
 \subsection{Sammenligningsbaserte sorteringsalgoritmer}
 Dette er en av to grupper sortering. Felles i denne gruppen er at soteringen skjer ved sammenligning av to elementer. De fleste av disse metodene klarer seg med å jobbe direkte i den originale inputlisten (altså at de ikke trenger å opprette nye, midlertidige lister), og disse sies å være "in place" sorteringsalgoritmer. Sammenligningsbasert sortering har en worst-case på $\Omega(n lg n)$.
 
