--- a/11kjoretidertilpensumalgoritmer.tex
+++ b/11kjoretidertilpensumalgoritmer.tex
@@ -32,6 +32,7 @@
 
 \subsection{Sortering og velging}
 \subsubsection{INSERTION SORT}
+Nummerense vi sil sortere kalles \textit{nøkler}. Er effektiv for å sortere små mengder tall. Fungerer slik amge sorterer en korthånd. Bruker sammenligning. Sorterer \textit{in-place}.
 \subsubsection{MERGE SORT}
 \subsubsection{QUICKSORT}
 \subsubsection{RANDOMIZED-QUICKSORT}
