--- a/11kjoretidertilpensumalgoritmer.tex
+++ b/11kjoretidertilpensumalgoritmer.tex
@@ -33,7 +33,10 @@
 \subsection{Sortering og velging}
 \subsubsection{INSERTION SORT}
 Nummerense vi sil sortere kalles \textit{nøkler}. Er effektiv for å sortere små mengder tall. Fungerer slik amge sorterer en korthånd. Bruker sammenligning. Sorterer \textit{in-place}.
+
 \subsubsection{MERGE SORT}
+MERGE SORT sorterer alle tall i en tallrekke. Kjøretiden er $\theta(n lg n)$.
+
 \subsubsection{QUICKSORT}
 \subsubsection{RANDOMIZED-QUICKSORT}
 \subsubsection{COUNTING SORT}
