Updates from ShareLaTeX

--- a/main.tex
+++ b/main.tex
@@ -59,7 +59,9 @@
 
 \Huge{Algoritmer og datastrukturer}\\[1pc]
 \vspace{3.5cm}
-
+\large{En oppsummering fra Cormen, kompendiet, gamle eksamener og forelesninger. Tar ingen creds for innholdet, jeg har bare samlet alt på et sted.}\\
+\vspace{1.5cm}
+\Large{Signe Elise Livgard}\\
 \Large{2016}\\
 %\vspace{1.0cm}
 %\includegraphics[scale=0.6]{images/ntnu.png}
